# posPlayground

./: ADAPTIVE_APP_INTEGRATION.md  API_QUICK_REFERENCE.md  API_REFERENCE_GUIDE.md  CHANGELOG.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_SUMMARY.md  FEATURE_CHECKLIST.md  GITHUB_RELEASE_SUMMARY.md  LEARNING_CHECKLIST.md  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  RBAC_SYSTEM_DOCUMENTATION.md  README.md  RELEASE_NOTES_v1.15.1.md  VERSION.md  migrate_port.sh  nextstep.md  ownerplatform.md  project.md  pubspec.yaml  start-admin-ui.sh  success.md
backend-fastapi/: Dockerfile  MEDIA_API_DOCUMENTATION.md  MIGRATION_SUMMARY.md  Makefile  POS_API_DOCUMENTATION.md  README.md  docker-compose.media.yml  docker-compose.yml  env.example  last.txt  pyproject.toml  requirements.txt  setup_media.sh  start_pos_api.sh  test_media_api.py  test_pos_api.py
backend-fastapi/.github/workflows/: ci.yml
backend-fastapi/app/: config.py  deps.py  main.py
backend-fastapi/app/db/: mongo.py  redis.py
backend-fastapi/app/middlewares/: __init__.py  logging.py  response.py
backend-fastapi/app/models/: __init__.py  access_zones.py  approvals.py  audit.py  auth.py  cash_drawers.py  catalog.py  core.py  customers.py  discounts.py  media_assets.py  open_tickets.py  pairing_logs.py  payment_types.py  payments.py  pricing.py  provider.py  provider_health.py  receipt_templates.py  redemptions.py  sales.py  secrets.py  settings.py  shifts.py  taxes.py  tickets.py  timecards.py  usage_counters.py
backend-fastapi/app/repositories/: __init__.py  access_zones.py  approvals.py  auth.py  base.py  cash_drawers.py  catalog.py  customers.py  discounts.py  enrollment.py  media_assets.py  open_tickets.py  pairing_logs.py  payment_types.py  payments.py  pricing.py  provider.py  provider_health.py  receipt_templates.py  redemptions.py  reports.py  sales.py  secrets.py  settings.py  shifts.py  taxes.py  tickets.py  timecards.py  usage_counters.py  users.py
backend-fastapi/app/routers/: __init__.py  access_zones.py  approvals.py  auth.py  cash_drawers.py  catalog.py  categories.py  customers.py  deep_link.py  enrollment.py  items.py  media.py  open_tickets.py  payments.py  pricing.py  products.py  provider.py  provider_health.py  redemptions.py  reports.py  roles.py  sales.py  settings.py  shifts.py  stores.py  sync.py  taxes.py  tickets.py  timecards.py  usage_counters.py  users.py  webhooks.py
backend-fastapi/app/schemas/: __init__.py  common.py
backend-fastapi/app/services/: __init__.py  auth.py  catalog.py  enrollment.py  image_processing_service.py  provider.py  sales.py  (+6 more)
backend-fastapi/docs/: ADAPTATION_GUIDE.md  OPERATIONS.md  SECURITY.md
backend-fastapi/scripts/: mongo-init.js  seed_data.py
backend-fastapi/tests/: test_main.py
(+182 files in other folders)
